--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body,
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px;
 }
 
@@ -29,4 +30,22 @@ body,
   color: white;
   border-radius: 5px;
   padding: 10px;
+}
+
+.confirm{
+  border-top:gray 1px solid;
+  color: gray
+}
+
+.option{
+  margin: 5px;
+  color: white;
+  background-color: blueviolet;
+  padding:5px;
+  width: 150px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
